fixed white space under update password component

--- a/app/assets/stylesheets/update_user.scss
+++ b/app/assets/stylesheets/update_user.scss
@@ -114,3 +114,7 @@
     font-size: 16px;
     font-weight: 800;
 }
+
+.update-password-container{
+    padding-bottom: 100px;
+}
